aks/gitops/apps/sapp1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapp1-service
spec:
  type: ClusterIP
  selector:
    app: sapp1
  ports:
    - port: 80
      targetPort: 80
