aks/gitops/apps/sapp1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapp1-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sapp1.aks.darrencloudlab.com
      secretName: sapp1-tls
  rules:
    - host: sapp1.aks.darrencloudlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sapp1-service
                port:
                  number: 80
